// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalLine should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-line"
    >
      <line
        style="stroke: steelblue; pointer-events: none;"
        x1="0"
        x2="800"
        y1="100"
        y2="100"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`HorizontalLine should render nothing if missing scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-line"
    />
  </svg>
</DocumentFragment>
`;
